# PixelSimulator

./: BoardPresenter.cpp  BoardPresenter.h  CMakeLists.txt  PixelBoard.cpp  PixelBoard.h  README.md  main.cpp  vcpkg.json
